force-app/main/default/objects/Stage_History__c/Stage_History__c.object-meta.xml
<CustomObject>
    <label>Stage History</label>
    <nameField>
        <displayFormat>SH{00000}</displayFormat>
        <label>Stage History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>