force-app/main/default/objects/Stage_History__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>