force-app/main/default/objects/Stage_History__c/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <formula>IF(
NOT(ISBLANK( End_Time__c )),
24*( End_Time__c - Start_Time__c ),
24*(NOW() - Start_Time__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>