force-app/main/default/objects/Stage_History__c/fields/Is_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Stage</label>
    <type>Checkbox</type>
</CustomField>