force-app/main/default/objects/Stage_History__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stage Histories</relationshipLabel>
    <relationshipName>Stage_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>