force-app/main/default/objects/Stage_History__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Stage Histories</relationshipLabel>
    <relationshipName>Stage_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>