force-app/main/default/objects/Stage_History__c/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Stage Histories</relationshipLabel>
    <relationshipName>Stage_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>