force-app/main/default/objects/Stage_History__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Stage Histories</relationshipLabel>
    <relationshipName>Stage_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>